wip: prepare client

--- a/client/styles/globals.css
+++ b/client/styles/globals.css
@@ -29,3 +29,9 @@ a {
     background: black;
   }
 }
+
+/* .gutter {
+  background-color: linear-gradient(to bottom, #fafafa 10%, white 90%);
+  background-repeat: no-repeat;
+  background-position: 50%;
+} */
